# knight-trivia

./: Cargo.toml  README.md
src/: main.rs  trivia.rs
